# evsim

./: .gitmodules  2d_passthrough.vert  CMakeLists.txt  LICENSE  README  black.frag  body.cc  body.h  box.frag  collision_data.h  config.cc  config.h  consumable.cc  consumable.h  datatypes.h  entity.h  env_food.cc  env_food.h  environment.h  environment_base.h  evsim.cc  evsim.h  example_config.lua  fixture_type.h  fuzzy.cc  fuzzy.h  ga.cc  ga.h  gfx_program.cc  gfx_program.h  input.cc  input.h  lua_conf.cc  lua_conf.h  neat.h  neat_plot.cc  neat_plot.h  ogl.cc  particle.frag  particle.vert  (+15 more)
env/: environments.cc  environments.h
env/door/: door_herbivore_widget.cc  door_herbivore_widget.h  door_herbivore_widget.ui  door_predator_widget.cc  door_predator_widget.h  door_predator_widget.ui  environment.cc  environment.h  herbivore_neat.cc  herbivore_neat.h  herbivore_neat_draw.cc  predator_neat.cc  predator_neat.h  predator_neat_draw.cc
env/food/: environment.cc  environment.h  food_herbivore_widget.cc  food_herbivore_widget.h  food_herbivore_widget.ui  herbivore_neat.cc  herbivore_neat.h  herbivore_neat_draw.cc
env/multi_food/: environment.cc  environment.h  herbivore_neat.cc  herbivore_neat.h  herbivore_neat_draw.cc  multi_food_herbivore_widget.cc  multi_food_herbivore_widget.h  multi_food_herbivore_widget.ui  multi_food_predator_widget.cc  multi_food_predator_widget.h  multi_food_predator_widget.ui  predator_neat.cc  predator_neat.h  predator_neat_draw.cc  species_neat.cc  species_neat.h  species_neat_draw.cc
env/multi_move/: environment.cc  environment.h  herbivore_neat.cc  herbivore_neat.h  herbivore_neat_draw.cc  multi_move_herbivore_widget.cc  multi_move_herbivore_widget.h  multi_move_herbivore_widget.ui  multi_move_predator_widget.cc  multi_move_predator_widget.h  multi_move_predator_widget.ui  predator_neat.cc  predator_neat.h  predator_neat_draw.cc
lib/: lua.cmake
scripts/: avg-neat-params.sh  overnight.lua  overnight.py  overnight_view.lua  plot-avg.gp  plot.gp  rolling_mean.py  ts2_door.lua  ts2_door.py
shaders/: box.vert  circle.frag  circle.vert  sensor.vert
src/: body.cc  collision_data.h  consumable.cc  consumable.h  environment_base.h  neat_plot.h  species.h  wall.cc  yell.cc  yell.h
src/env/: environments.cc  environments.h
src/env/door/: environment.cc  herbivore_neat_draw.cc
src/env/food/: environment.cc  environment.h  food_herbivore_widget.h  food_herbivore_widget.ui  herbivore_neat.h  herbivore_neat_draw.cc
src/env/multi_food/: environment.h  herbivore_neat.cc  herbivore_neat_draw.cc  multi_food_herbivore_widget.h  multi_food_predator_widget.ui  predator_neat.cc  predator_neat_draw.cc
src/env/multi_move/: environment.h  herbivore_neat.cc  herbivore_neat_draw.cc  multi_move_herbivore_widget.ui  multi_move_predator_widget.cc  multi_move_predator_widget.h  predator_neat.h  predator_neat_draw.cc
src/ui/: fitness_graph.cc  fitness_graph.h  fitness_graph.ui  gui.h
ui/: fitness_graph.cc  fitness_graph.h  fitness_graph.ui  gui.cc  gui.h  gui.ui  herbivore_widget.cc  herbivore_widget.h  herbivore_widget.ui  predator_widget.cc  predator_widget.h  predator_widget.ui
